--- a/COMPONENTS/media.html
+++ b/COMPONENTS/media.html
@@ -1,13 +1,14 @@
-div class="media">
-    <div class="media__image">
-        <svg class="icon icon--primary">
-            <use xlink:href="images/sprite.svg#wordpress"></use>
-        </svg>
-    </div>
-    <div class="media__body">
-        <h3 class="media__title">Easy Start & Managed Updates </h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid temporibus et distinctio
-             enim porro fugiat iste sequi 
-             officiis delectus esse?
-        </p>
+  <div class="media">
+        <div class="media__image">
+            <svg class="icon icon--primary">
+                <use xlink:href="images/sprite.svg#wordpress"></use>
+            </svg>
+        </div>
+        <div class="media__body">
+            <h3 class="media__title">Easy Start & Managed Updates </h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid temporibus et distinctio
+                 enim porro fugiat iste sequi
+                 officiis delectus esse?
+            </p>
+        </div>
     </div>
