--- a/COMPONENTS/quotes.html
+++ b/COMPONENTS/quotes.html
@@ -1,11 +1,20 @@
-<div class="media">
-    <div class="media__image">
-        <svg class="icon icon--primary quote__line">
-            <use xlink:href="images/sprite.svg#line"></use>
-        </svg>
-    </div>
-    <div class="media__body">
-        <h3 class="media__title quote__author">Solomon Offor </h3>
-        <p class="quote__organisation">Norland Int. </p>
-    </div>
-</div>
+
+<blockquote class="quote">
+    <p class="quote__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores maiores pariatur 
+        quam doloremque optio molestiae aliquid
+        eligendi earum animi deleniti.
+    </p>
+    <footer>
+        <div class="media">
+            <div class="media__image">
+                <svg class="icon icon--primary quote__line">
+                    <use xlink:href="images/sprite.svg#line"></use>
+                </svg>
+            </div>
+            <div class="media__body">
+                <h3 class="media__title quote__author">Solomon Offor </h3>
+                <p class="quote__organisation">Norland Int. </p>
+            </div>
+        </div>
+    </footer>
+</blockquo
