build the testimonial components.

--- a/COMPONENTS/quotes.html
+++ b/COMPONENTS/quotes.html
@@ -1,6 +1,6 @@
 
 <blockquote class="quote">
-    <p class="quote__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores maiores pariatur 
+     <p class="quote__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores maiores pariatur 
         quam doloremque optio molestiae aliquid
         eligendi earum animi deleniti.
     </p>
@@ -16,5 +16,5 @@
                 <p class="quote__organisation">Norland Int. </p>
             </div>
         </div>
-    </footer>
-</blockquo
+    </foote>
+</blockquote>
