--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -351,6 +351,10 @@ a {
     color: #fff;
 }
 
+.card--primary .badge--primary {
+    background: #126de4;
+}
+
 .card--secondary .badge--secondary {
     background: #02cdf1;
 }
@@ -358,6 +362,9 @@ a {
 
 
 /* plans */
+.plan {
+    transition: transform 0.2s ease-out;
+}
 .plan__name {
     color: #fff;
     margin: 0;
@@ -388,6 +395,10 @@ a {
     margin-bottom: 2rem;
 }
 
+.plan--popular {
+    transform: scale(1.1);
+
+}
 .plan--popular .card__header {
     position: relative;
 }
@@ -399,6 +410,14 @@ a {
     position: absolute;
     top: -6px;
     right: 5%;
+}
+
+.plan:hover {
+    transform: scale(1.05);
+}
+
+.plan--popular:hover {
+    transform: scale(1.15);
 }
 
 @media screen and (min-width: 1024px) {
@@ -787,5 +806,26 @@ a {
 @media screen and (min-width: 768px) {
     .block-domain__prices {
         grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    }
+}
+
+
+
+
+/* Plans Block */
+.block-plans .grid {
+    gap: 8rem 4rem;
+}
+
+.block-plans .card {
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+
+@media screen and (min-width: 1024px) {
+    .grid--1x3{
+        grid-template-columns: repeat(3, 1fr);
+
     }
 }
