build the showcase block components.

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -18,6 +18,10 @@
 }
 
 /* typography */
+::selection {
+    background: var(--color-primary);
+    color: #fff;
+}
 
 html {
     font-size: 62.5%;
@@ -43,9 +47,11 @@ h1 {
 h2 {
     font-size: 4rem;
 }
+
 h3 {
     font-size: 3rem;
-}
+    font-weight: 500;
+}    
 
 p {
     margin-top: 0;
@@ -140,7 +146,6 @@ a {
 .list {
     list-style: none;
     padding-left: 0;
-    color: var(--color-headings);
 
 }
 
@@ -152,6 +157,8 @@ a {
 .list--tick {
     list-style-image: url(../images/tick.svg);
     padding-left: 3rem;
+    color: var(--color-headings);
+
 }
 
 .list--tick .list__item {
@@ -443,6 +450,7 @@ a {
 /* media */
 .media {
     display: flex;
+    margin-bottom: 4rem;
 }
 
 .media__title {
@@ -660,18 +668,20 @@ a {
     color: #7b858b;
 }
 
-.block--dark .block__heading {
+.block--dark h1,
+.block--dark h2,
+.block--dark h3 {
     color: #fff;
 }
 
 .block--skewed-right {
     padding-bottom: calc(var(--padding-vertical) + 4rem);
-    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 83%);    
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);    
 }
 
 .block--skewed-left {
     padding-bottom: calc(var(--padding-vertical) + 4rem);
-    clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 0% 100%);    
+    clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);    
 }
 
 .container {
@@ -751,9 +761,6 @@ a {
 
 
 /* Hero */
-.hero {
-    clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);    
-}
 
 
 .hero__tagline {
@@ -855,5 +862,26 @@ a {
 @media screen and (min-width: 768px) {
     .feature:nth-of-type(odd) .feature__content {
         order: 2;
+    }
+}
+
+
+
+/* Showcase Block */
+.block-showcase__image > img{
+    width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+    .block-showcase .grid {
+        grid-template-columns: 50% 50%;
+    }
+    .block-showcase__image {
+        justify-self: end;
+    }
+
+    .block-showcase__image > img {
+        width: auto;
+        max-width: 700px;
     }
 }
