--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -657,6 +657,7 @@ a {
 
 .block__header {
     text-align: center;
+    margin-bottom: 4rem;
 }
 
 .block__heading {
@@ -761,8 +762,6 @@ a {
 
 
 /* Hero */
-
-
 .hero__tagline {
     font-size: 2rem;
     color: #b9c3cf;
