--- a/COMPONENTS/hero-sizes.html
+++ b/COMPONENTS/hero-sizes.html
@@ -2,15 +2,11 @@
     <div class="container grid grid--1x2">
         <header class=" block__header hero__content">
             <h1 class="block__heading">Cloud Hosting For Pros</h1>
-            <p class="hero__tagline">Deploy your websites in less than 60 seconds.</p>
-            <a href="" class="btn btn--accent btn--stretched">Get Started.</a>
+            <p class="hero__tagline">Deploy your websites in less than 60 seconds</p>
+            <a href="" class="btn btn--accent btn--stretched">Get Started</a>
         </header>
         <picture>
             <source type="image/webp" srcset="images/banner.webp 1x, images/banner@2x.webp 2x">
-            <img class="hero__image" src="images/banner.png" alt="" />
-        </picture>
-        <picture>
-            <source type="image/png" srcset="images/banner.png 1x, images/banner@2x.png 2x">
             <img class="hero__image" src="images/banner.png" alt="" />
         </picture>
     </div>
