--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -8,8 +8,6 @@
     --color-border: #ccc;
     --border-radius: 30px;
 
-    
-
 
 }
 
@@ -29,7 +27,7 @@ html {
 
 body {
     font-family: inter,Arial, Helvetica, sans-serif;
-    font-size: 2.4rem;
+    font-size: 2rem;
     line-height: 1.5;
     color: var(--color-body);
 }
@@ -41,7 +39,7 @@ h1, h2, h3 {
 }
 
 h1 {
-    font-size: 7rem;
+    font-size: 6rem;
 }
 
 h2 {
@@ -340,6 +338,7 @@ a {
     border-radius: 7px;
     box-shadow: 0 0 20px 10px #f3f3f3;
     overflow: hidden;
+
 }
 
 .card__header, .card__body {
@@ -371,6 +370,7 @@ a {
 /* plans */
 .plan {
     transition: transform 0.2s ease-out;
+
 }
 .plan__name {
     color: #fff;
@@ -403,7 +403,7 @@ a {
 }
 
 .plan--popular {
-    transform: scale(1.1);
+    transform: scale(1);
 
 }
 .plan--popular .card__header {
@@ -443,6 +443,11 @@ a {
     .plan__description {
         font-size: 1.7rem;
     }
+
+    .plan--popular {
+        transform: scale(1.1);
+    
+    }
 }
 
 
@@ -470,7 +475,7 @@ a {
 
 /* quotes */
 .quote {
-    font-size: 3rem;
+    font-size: 2rem;
     font-style: italic;
     color: var(--color-body-darker);
     line-height: 1.3;
@@ -485,10 +490,12 @@ a {
 }
 
 .quote__author {
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: 500;
     font-style: normal;
     margin-bottom: 0;
+    white-space: nowrap;
+
 }
 
 .quote__organisation {
@@ -536,45 +543,142 @@ a {
 
 
 /* Testimonials */
-.testimonial {
-    padding: 3rem;
-}
+    
+    .testimonial .quote {
+        margin: 2rem 0;
+        font-size: 110%;
+      }  
+    
+    .testimonial {
+        padding: 3rem;
+    }
+    
+    .testimonial__image {
+        position: relative;
+        width: 20rem;
+    }
+    
+    .testimonial__image > img {
+        width: 100%;
+        position:static;
+    
+    }
+    
+    .testimonial__image > .icon-container {
+        position: absolute;
+        top: 3rem;
+        right: -32px;
+    }
+    
+    /* .testimonial__image > img { */
+        /* width: 200px;  */
+        /* } */
+    
+    
+        /* .grid--1x2{
+            grid-template-columns: 334px, 334px;
+    
+        } */
 
-.testimonial__image {
-    position: relative;
-}
 
-.testimonial__image > img {
-    width: 100%;
-}
 
-.testimonial__image > .icon-container {
-    position: absolute;
-    top: 3rem;
-    right: -32px;
-}
+@media screen and (min-width: 768px){
+    /* .testimonial__image > .icon-container { */
+        /* position: absolute; */
+        /* top: 3rem; */
+        /* right: 180px;  */
+    /* } */
 
-@media screen and (min-width: 768px) {
+
+
+    .testimonial__image > img {
+         width: 334px;
+      } 
+
+        .testimonial .grid--1x2{
+            grid-template-columns: repeat(2, 1fr);
+        }
+   
+
+    .testimonial .quote {
+        margin: 2rem 0;
+        width: 27.4rem;
+        height: 25.7rem ;
+
+    }
+
+
     .testimonial .quote, .testimonial__author {
         font-size: 2.4rem;
     }
 
     .testimonial .quote {
-        margin-left: 6rem;
+        margin-left: 7rem;
+        margin-top: 1rem;
     }
+
+    
+      .testimonial__image { 
+      position: relative;
+      width: 33.4rem;
+    }  
+
+ }
+
+ @media screen and (min-width: 1024px) {
+
+    .testimonial__image > .icon-container {
+        position: absolute;
+        top: 3rem;
+        right: -155px;  
+    }
+
+
+
+    .testimonial__image > img {
+        width: 462px;
+     } 
+
+       .testimonial .grid--1x2{
+           grid-template-columns: repeat(2, 1fr);
+       }
+       
+       
+    }
+    
+    @media screen and (min-width: 1440px) {
+        .testimonial__image > .icon-container {
+            position: absolute;
+            top: 3rem;
+            right: -235px; 
+        }
+
+
+
+
+       .testimonial__image > img {
+           width: 540px;
+        } 
+   
+          .testimonial .grid--1x2{
+              grid-template-columns: repeat(2, 1fr);
+          }
 }
 
 
 
 
-/* Callouts */
+
+Callouts
+ .container {
+    max-width: 1140px;
+    margin: 0 auto;
+} 
 .callout {
     padding: 4rem;
     border-radius: 5px;
-    height: 195px;
-    width: 1140px;
-    position: relative;
-    display: grid;
+    height: 495px;
+    max-width: 1140px;
 
 }
 
@@ -598,7 +702,17 @@ a {
     text-align: center;
 }
 
+
 @media screen and (min-width: 768px) {
+   .callout {
+       padding: 4rem;
+       border-radius: 5px;
+       height: 285px; 
+  }
+
+}
+
+@media screen and (min-width: 1024px) {
     .callout .grid--1x2 {
         grid-template-columns: 1fr auto;
     }
@@ -606,12 +720,21 @@ a {
     
     .callout__content {
         text-align: left;
+        /* padding-bottom:  50rem 50rem; */
     }
 
     .callout .btn {
         justify-self: start;
         margin: 0 2rem;
     }
+    
+    
+    .callout {
+        padding: 4rem;
+        border-radius: 5px;
+        height: 195px; 
+   }
+
 }
 
 
@@ -626,7 +749,7 @@ a {
 
 .collapsible__heading{
     margin-top: 0;
-    font-size: 3rem;
+    font-size: 2.5rem;
 
 }
 
@@ -656,7 +779,7 @@ a {
 
 /* Blocks */
 .block {
-    --padding-vertical: 6rem;
+    --padding-vertical: 5rem;
     padding: var(--padding-vertical) 2rem;
 }
 
@@ -682,13 +805,14 @@ a {
 
 .block--skewed-right {
     padding-bottom: calc(var(--padding-vertical) + 4rem);
-    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);    
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 95%);    
 }
 
 .block--skewed-left {
     padding-bottom: calc(var(--padding-vertical) + 4rem);
-    clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);    
-}
+    clip-path: polygon(0% 0%, 100% 0%, 100% 95%, 0% 100%);   
+} 
+
 
 .container {
     max-width: 1140px;
@@ -711,6 +835,11 @@ a {
 .nav__list {
     width: 100%;
     margin: 0;
+}
+
+.nav__logo {
+    width: 15rem;
+    margin-top: 1rem;
 }
 
 .nav__item {
@@ -850,7 +979,7 @@ a {
 /* Feature Block */
 .feature {
     gap: 4rem 2rem;
-    /* margin: 12rem 0;  */
+    margin: 0 0; 
 }
 
 .feature:first-of-type {
@@ -881,6 +1010,7 @@ a {
 @media screen and (min-width: 768px) {
     .block-showcase .grid {
         grid-template-columns: 50% 50%;
+        
     }
     .block-showcase__image {
         justify-self: end;
@@ -898,6 +1028,7 @@ a {
 /* Footer */
 .footer {
     background: #232323;
+    /* height: 314px; */
 }
 
 .footer a {
@@ -958,6 +1089,7 @@ a {
     
     .footer__copywright {
         font-size: 1.5rem;
+        white-space: wrap;
     }
 
     .footer__section {
